# app_plugin

./: help.html  pyproject.toml  rst_autosave.json
application_data/: README.md
application_data/_docs/: README.md  index.html  index.rst  info.rst
application_data/_settings/: README.md  app_plugin.yaml  custom_styles.css  custom_styles_dark.css  custom_styles_light.css  viewer.yaml
src/app_plugin/: __main__.py  api_router.py  api_router_extended.py  help_page.py  icon.py  main.py  main_page.py  menu.py  message.py  plugin_view.py  settings_page.py  test_colors.py  theme.py  toggle_button.py
src/app_plugin/_snippets/: README.md
src/app_plugin/_snippets/yaml/: function.yaml
src/app_plugin/plugins/: README.md  __init__.py  code_editor.py  diff_view.py  monaco_editor.py  rst_editor.py  setup.py  snippets_updater.py
src/app_plugin/plugins/concepts/: code_editor.py  diff_view.py  snippets_updater.py
